--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,8 +18,6 @@
     <uses-permission android:name="android.permission.DISABLE_KEYGUARD" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
 
-<!--    <uses-permission android:name="android.permission.REORDER_TASKS" />-->
-
     <application
         android:name=".MainApplication"
         android:allowBackup="true"
@@ -31,7 +29,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".mainapp.MainAppTestActivity"></activity>
+        <activity android:name=".books.ThreadTestActivity"></activity>
+        <activity android:name=".mainapp.MainAppTestActivity" />
         <activity android:name=".androidapi.NetworkTestActivity" />
         <activity
             android:name=".broadcast.LocalBroadcastSendDemoActivity"
