--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,6 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.DISABLE_KEYGUARD" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
-
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
 
     <application
@@ -31,7 +30,10 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".picpro.PicProcessTestActivity"></activity>
+        <activity
+            android:name=".androidapi.HandlerTestActivity"
+            android:exported="true" />
+        <activity android:name=".picpro.PicProcessTestActivity" />
         <activity android:name=".books.ThreadTestActivity" />
         <activity android:name=".mainapp.MainAppTestActivity" />
         <activity android:name=".androidapi.NetworkTestActivity" />
